--- a/arch/arm64/configs/ze500kg_defconfig
+++ b/arch/arm64/configs/ze500kg_defconfig
@@ -1,7 +1,12 @@
+CONFIG_ASN1=y
 CONFIG_SYSVIPC=y
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
 CONFIG_AUDIT=y
+CONFIG_TASKSTATS=y
+CONFIG_TASK_DELAY_ACCT=y
+CONFIG_TASK_XACCT=y
+CONFIG_TASK_IO_ACCOUNTING=y
 CONFIG_RCU_FAST_NO_HZ=y
 CONFIG_IKCONFIG=y
 CONFIG_IKCONFIG_PROC=y
@@ -218,6 +223,7 @@ CONFIG_CFG80211=y
 CONFIG_NL80211_TESTMODE=y
 CONFIG_CFG80211_INTERNAL_REGDB=y
 CONFIG_RFKILL=y
+CONFIG_RFKILL_INPUT=y
 CONFIG_NFC_QNCI=y
 # CONFIG_NFC_NQ=y
 CONFIG_IPC_ROUTER=y
@@ -585,6 +591,10 @@ CONFIG_SECURITY=y
 CONFIG_SECURITY_NETWORK=y
 CONFIG_LSM_MMAP_MIN_ADDR=4096
 CONFIG_SECURITY_SELINUX=y
+CONFIG_ASYMMETRIC_KEY_TYPE=y
+CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
+CONFIG_PUBLIC_KEY_ALGO_RSA=y
+CONFIG_X509_CERTIFICATE_PARSER=y
 CONFIG_CRYPTO=y
 CONFIG_CRYPTO_NULL=y
 CONFIG_CRYPTO_XTS=y
@@ -631,6 +641,9 @@ CONFIG_CRYPTO_AES_ARM64_CE_CCM=y
 CONFIG_CRYPTO_AES_ARM64_CE_BLK=y
 CONFIG_CRYPTO_AES_ARM64_NEON_BLK=y
 CONFIG_QMI_ENCDEC=y
+# CUSTOM CHANGES
+CONFIG_FB_MSM_MDSS_KCAL_CTRL=y
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_STRICT_MEMORY_RWX=y
 CONFIG_MSM_PERFORMANCE=y
 CONFIG_CRYPTO_TWOFISH_COMMON=y
