--- a/.travis.yml
+++ b/.travis.yml
@@ -2,14 +2,15 @@ image: ubuntu:xenial
 before_script:
 - apt-get update -qyy
 - apt-get install -qyy curl bc make git build-essential
-- apt-get --yes install libglib2.0-dev curl flex g++-multilib gcc-multilib gnupg gperf lib32ncurses5-dev lib32z1-dev libesd0-dev libncurses5-dev libsdl1.2-dev libwxgtk-media3.0-dev libxml2 libxml2-utils lzop pngcrush schedtool squashfs-tools xsltproc zip zlib1g-dev
+- apt-get install libncurses5-dev
+- apt-get install git-core gnupg flex bison gperf build-essential zip curl libc6-dev libncurses5-dev:i386 x11proto-core-dev libx11-dev:i386 libreadline6-dev:i386 libgl1-mesa-glx:i386 libgl1-mesa-dev g++-multilib tofrodos python-markdown libxml2-utils xsltproc zlib1g-dev:i386
 
 building:
 script:
  - git clone https://github.com/LineageOS/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9
  - export PATH=$PATH:$PWD/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9/bin/
-- export KBUILD_BUILD_USER=user #это правите по вкусу, можно вписать ник
-- export KBUILD_BUILD_HOST=4pda
+- export KBUILD_BUILD_USER=KI.LAB
+- export KBUILD_BUILD_HOST=ZenProject
 - export ARCH=arm64
 - export SUBARCH=arm64
 - export CROSS_COMPILE=$PWD/android_prebuilts_gcc_linux-x86_aarch64_aarch64-linux-android-4.9/bin/aarch64-linux-android---
